Correção de link do css, e dos Scripts.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Carrinho Compra em JavaScript</title>
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Hepta+Slab:400,700|Lato:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -96,8 +96,8 @@
 
   
    
-    <script type="text/javascript" src="js/abaixo10reais.js" ></script>
-    <script type="text/javascript" src="js/acima10reais.js" ></script>
-     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="abaixo10reais.js" ></script>
+    <script type="text/javascript" src="acima10reais.js" ></script>
+     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
